Fixed Emscripten compilation (at least locally)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,6 +25,8 @@ if(EMSCRIPTEN)
     # I honestly have no idea why this is necessary to build.
     set(LIBTYPE STATIC CACHE BOOL "" FORCE)
   endif()
+  add_compile_options(-matomics -mbulk-memory)
+  add_link_options(--shared-memory -matomics -mbulk-memory)
 endif()
 
 macro(install_compiled_shaders currProject)
@@ -310,11 +312,8 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
   set_target_properties(glew glew_s glewinfo visualinfo PROPERTIES FOLDER Deps)
 elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
-  add_compile_options(-sUSE_PTHREADS=1)
-  add_link_options(-sEXCEPTION_DEBUG=1)
-  add_link_options(--profiling-funcs)
-  add_link_options(-sUSE_PTHREADS=1)
-  add_link_options(-sPTHREAD_POOL_SIZE=20)
+  add_compile_options(-sUSE_PTHREADS=1 -matomics -mbulk-memory)
+  add_link_options(-sEXCEPTION_DEBUG=1 --profiling-funcs -sUSE_PTHREADS=1 -sPTHREAD_POOL_SIZE=20 -matomics -mbulk-memory --shared-memory)
   set_target_properties(BrotBoxEngine PROPERTIES LINK_FLAGS "-s USE_GLFW=3 -s USE_WEBGL2=1")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
