Ignoring dependency warnings.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -67,6 +67,14 @@ macro(end_embed_file cpp_file_string h_file_string cpp_file_name h_file_name)
   file(WRITE ${cpp_file_name} ${${cpp_file_string}})
 endmacro()
 
+macro(disable_warnings target)
+  if(MSVC)
+    target_compile_options(${target} PRIVATE /W0)
+  elseif(CMAKE_CXX_COMPILER_ID STREQUAL "GNU" OR CMAKE_CXX_COMPILER_ID STREQUAL "Clang")
+    target_compile_options(${target} PRIVATE -w)
+  endif()
+endmacro()
+
 macro(add_trivial_project name)
   add_compile_definitions(BBE_APPLICATION_ASSET_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
   add_executable(${name})
@@ -299,14 +307,14 @@ add_subdirectory(BrotBoxEngine)
 
 if(BBE_RENDER_MODE STREQUAL "Vulkan")
   find_package(Vulkan REQUIRED)
-  target_include_directories(BrotBoxEngine PUBLIC Vulkan::Vulkan)
+  target_include_directories(BrotBoxEngine SYSTEM PUBLIC Vulkan::Vulkan)
   target_link_libraries(BrotBoxEngine Vulkan::Vulkan)
   target_compile_definitions(BrotBoxEngine PUBLIC GLFW_INCLUDE_VULKAN)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_VULKAN)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_vulkan.cpp)
 elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   add_subdirectory(Third-Party/glew-2.1.0/build/cmake)
-  target_include_directories(BrotBoxEngine PUBLIC Third-Party/glew-2.1.0/include)
+  target_include_directories(BrotBoxEngine SYSTEM PUBLIC Third-Party/glew-2.1.0/include)
   target_link_libraries(BrotBoxEngine glew_s)
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
@@ -339,6 +347,7 @@ else()
 endif()
 
 add_subdirectory(Third-Party/libsodium-cmake)
+disable_warnings(sodium)
 target_link_libraries(BrotBoxEngine sodium)
 include_directories(Third-Party/libsodium-cmake/libsodium/src/libsodium/include)
 set_target_properties(sodium PROPERTIES FOLDER Deps)
@@ -348,13 +357,13 @@ target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/img
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui_demo.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui_widgets.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/imgui_tables.cpp)
-target_include_directories(BrotBoxEngine PUBLIC Third-Party/imgui-master)
-target_include_directories(BrotBoxEngine PUBLIC Third-Party/imgui-master/backends)
+target_include_directories(BrotBoxEngine SYSTEM PUBLIC Third-Party/imgui-master)
+target_include_directories(BrotBoxEngine SYSTEM PUBLIC Third-Party/imgui-master/backends)
 
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/implot-master/implot.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/implot-master/implot_items.cpp)
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/implot-master/implot_demo.cpp)
-target_include_directories(BrotBoxEngine PUBLIC Third-Party/implot-master)
+target_include_directories(BrotBoxEngine SYSTEM PUBLIC Third-Party/implot-master)
 
 set(BOX2D_BUILD_UNIT_TESTS OFF CACHE BOOL "" FORCE)
 set(BOX2D_BUILD_TESTBED OFF CACHE BOOL "" FORCE)
@@ -389,7 +398,8 @@ if(BBE_ADD_AUDIO)
   set(AL_LIBTYPE_STATIC ON CACHE BOOL "" FORCE)
   set(LIBTYPE STATIC CACHE STRING "" FORCE)
   add_subdirectory("Third-Party/openal-soft-1.23.1")
-  target_include_directories(BrotBoxEngine PUBLIC "Third-Party/openal-soft-1.23.1/include")
+  disable_warnings(OpenAL)
+  target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/openal-soft-1.23.1/include")
   if(NOT EMSCRIPTEN)
     target_link_libraries(BrotBoxEngine OpenAL)
   endif()
@@ -398,8 +408,8 @@ else()
   add_compile_definitions(BBE_NO_AUDIO)
 endif()
 
-target_include_directories(BrotBoxEngine PUBLIC "Third-Party/stb")
-target_include_directories(BrotBoxEngine PUBLIC "Third-Party/minimp3")
+target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/stb")
+target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/minimp3")
 
 if(BBE_ADD_TEST_PROJECTS)
   add_subdirectory(Tests)
