--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -78,6 +78,10 @@ endmacro()
 macro(add_trivial_project name)
   add_compile_definitions(BBE_APPLICATION_ASSET_PATH="${CMAKE_CURRENT_SOURCE_DIR}")
   add_executable(${name})
+  if(MSVC)
+    target_compile_options(${name} PRIVATE /wd4244 /wd4267) # I don't quite care about "possible loss of data" in trivial projects.
+    target_compile_options(${name} PRIVATE /wd4305 /wd4309) # Same for "truncation of contant" warnings.
+  endif()
   target_link_libraries(${name} BrotBoxEngine)
   file(GLOB local_src CONFIGURE_DEPENDS "*.cpp")
   target_sources(${name} PUBLIC "${local_src}")
@@ -319,6 +323,10 @@ elseif(BBE_RENDER_MODE STREQUAL "OpenGL")
   target_compile_definitions(BrotBoxEngine PUBLIC BBE_RENDERER_OPENGL)
   target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_opengl3.cpp)
   set_target_properties(glew glew_s glewinfo visualinfo PROPERTIES FOLDER Deps)
+  if(MSVC)
+    target_link_options(glew PRIVATE /BASE:0x140000000) # Fixes LNK4281 warning: undesirable base address 0x62AA0000 for x64 image; set base address above 4GB for best ASLR optimization
+  endif()
+  disable_warnings(glewinfo)
 elseif(BBE_RENDER_MODE STREQUAL "Emscripten")
   add_compile_options(-sUSE_PTHREADS=1 -matomics -mbulk-memory)
   add_link_options(-sEXCEPTION_DEBUG=1 --profiling-funcs -sUSE_PTHREADS=1 -sPTHREAD_POOL_SIZE=20 -matomics -mbulk-memory --shared-memory)
@@ -330,6 +338,11 @@ elseif(BBE_RENDER_MODE STREQUAL "NullRenderer")
   target_compile_definitions(BrotBoxEngine PUBLIC GLFW_INCLUDE_NONE)
 else()
   message(FATAL_ERROR "Unknown BBE_RENDER_MODE: ${BBE_RENDER_MODE}")
+endif()
+
+if(MSVC)
+  # C++17 deprecated wstring_convert without providing an alternative. Thanks.
+  target_compile_definitions(BrotBoxEngine PUBLIC _SILENCE_CXX17_CODECVT_HEADER_DEPRECATION_WARNING)
 endif()
 
 target_sources(BrotBoxEngine PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/Third-Party/imgui-master/backends/imgui_impl_glfw.cpp)
@@ -398,12 +411,15 @@ if(BBE_ADD_AUDIO)
   set(AL_LIBTYPE_STATIC ON CACHE BOOL "" FORCE)
   set(LIBTYPE STATIC CACHE STRING "" FORCE)
   add_subdirectory("Third-Party/openal-soft-1.23.1")
-  disable_warnings(OpenAL)
   target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/openal-soft-1.23.1/include")
   if(NOT EMSCRIPTEN)
     target_link_libraries(BrotBoxEngine OpenAL)
   endif()
   set_target_properties(common ex-common OpenAL openal-info PROPERTIES FOLDER Deps)
+  disable_warnings(OpenAL)
+  disable_warnings(common)
+  disable_warnings(ex-common)
+  disable_warnings(openal-info)
 else()
   add_compile_definitions(BBE_NO_AUDIO)
 endif()
