--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -67,3 +67,6 @@ add_subdirectory(ExampleLSystem)
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExamplePaint)
 endif()
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleTowerDefense)
+endif()
