Added nlohmann json as a dependency.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -394,7 +394,7 @@ if(BBE_ADD_CURL)
   set(BUILD_CURL_EXE OFF CACHE BOOL "" FORCE)
   set(CURL_DISABLE_TESTS ON CACHE BOOL "" FORCE)
   if(WIN32)
-    set(CMAKE_USE_SCHANNEL ON CACHE BOOL "" FORCE)
+    set(CURL_USE_SCHANNEL ON CACHE BOOL "" FORCE)
   endif()
   add_subdirectory(Third-Party/curl-8.8.0)
   target_link_libraries(BrotBoxEngine libcurl)
@@ -426,6 +426,7 @@ endif()
 
 target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/stb")
 target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/minimp3")
+target_include_directories(BrotBoxEngine SYSTEM PUBLIC "Third-Party/nlohmann")
 
 if(BBE_ADD_TEST_PROJECTS)
   add_subdirectory(Tests)
