Introducing the SoundGenerator.

--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -70,3 +70,6 @@ endif()
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleTowerDefense)
 endif()
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleSoundGenerator)
+endif()
