--- a/Examples/CMakeLists.txt
+++ b/Examples/CMakeLists.txt
@@ -73,3 +73,6 @@ endif()
 if(BBE_ADD_EXPERIMENTAL)
   add_subdirectory(ExampleSoundGenerator)
 endif()
+if(BBE_ADD_EXPERIMENTAL)
+  add_subdirectory(ExampleParticleGravity2D)
+endif()
